pemFioi/quickAlgo/quickAlgo-mobileFirst.css
/* ... */
body.blockly > *,
body > * {
  width: auto;
}
* {
  box-sizing: border-box;
}
body {
  font-size: 12px;
  position: relative;
  overflow-x: hidden;
}
#openEditorMenu {
  position: relative;
  background-color: #4a4a4a;
  padding: 8px 13px;
  border-radius: 5px 0 0 5px;
  color: #fff;
  cursor: pointer;
  order: 1;
}
#openEditorMenu::before,
#openEditorMenu::after {
  content: " ";
  position: absolute;
  right: 0;
  width: 10px;
  height: 10px;
  background: transparent;
}
#openEditorMenu::before {
  top: -10px;
  border-radius: 50% 0;
  box-shadow: 0px 5px 0 #4a4a4a;
}
#openEditorMenu::after {
  bottom: -10px;
  border-radius: 0 50%;
  box-shadow: 0px -5px 0 #4a4a4a;
}
#editorMenu {
  height: 100%;
  position: absolute;
  right: -50%;
  width: 50%;
  top: 0;
  box-shadow: 2px 0 0 #000 inset;
  background-color: #4a4a4a;
  color: #FFF;
  z-index: 99;
}
#editorMenu .editorMenuHeader {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding: 12px 20px;
  z-index: 1;
  text-transform: uppercase;
  font-weight: bold;
}
#editorMenu #closeEditorMenu {
  position: absolute;
  top: 15px;
  right: 15px;
  cursor: pointer;
}
#editorMenu #closeEditorMenu:hover {
  color:#4a90e2;
}
#editorMenu .editorActions {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
#editorMenu .editorActions div {
  flex: 1 1 0;
  padding: 20px;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  border-top: 1px solid #5c5c5c;
  cursor: pointer;
  text-align: center;
}
#editorMenu .editorActions div:hover {
  color:#4a90e2;
}
#editorMenu .editorActions div:first-child {
  border-top: none;
}
#editorMenu .editorActions div span.fas,
#editorMenu .editorActions div span.far {
  font-size: 32px;
}
#editorMenu #saveUrl {
  display: none;
}
#editorMenu input[type=file] {
  cursor: pointer;
  position: absolute;
  top: 0px;
  left: 0px;
  height: 100%;
  width: 100%;
  opacity: 0;
  -moz-opacity: 0;
  filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
}

/*****************
  LAYOUT
*****************/
#task {
  display: flex;
  flex-direction: column;
  justify-content: stretch;
  height: calc(100vh - 40px);
}
#taskContent {
  flex: 2 0 0;
  position: static !important;
  display: flex;
  justify-content: stretch;
}
h2.sectionTitle {
  font-size: 22px;
  font-weight: lighter;
  color: #4a90e2;
  margin: 0;
}
h2.sectionTitle .icon {
  color: #fff;
  background-color: #4a90e2;
  border-radius: 50%;
  width: 2em;
  line-height: 2em;
  text-align: center;
  font-size: 14px;
  vertical-align: text-bottom;
  margin-right: 10px;
}
/************************
  DISPLAY HELPER ELEMENTS
*************************/
#displayHelperAnswering {
  display: none;
}

/*****************
  TASK DESCRIPTION
*****************/
#taskIntro {
  padding: 10px 20px;
  overflow: auto;
  color: #9b9b9b;
}


/*****************
  TASK GRID & TESTS
*****************/

#grid {
  overflow: auto;
  max-width: 100vw;
}
#testSelector {
    padding-left: 10px;
}
.testResult {
    margin-left: 10px;
    padding: 3px;
    padding-left: 5px;
    padding-right: 5px;
    border-radius: 50px;
    color: #FFFFFF;
    width: 250px;
    font-size: 12px;
    font-weight: 500;
}
.testResult.testSuccess {
    background-color: green;
}
.testResult.testPartial {
    background-color: orange;
}
.testResult.testFailure {
    background-color: red;
}
.testResult.testEvaluating {
    background-color: purple;
}
.testResultIcon {
  display: inline-block;
  width: 21px;
  height: 21px;
  line-height: 21px;
}
.testResultIcon.testSuccess span {
  background: #b8e986;
  border-radius: 100%;
  color: #fff;
}
.testResultIcon.testPartial,
.testResultIcon.testFailure {
  color: #ff001f;
}

#gridButtonsAfter #testSelector {
  padding: 0;
}
#testSelector .tabs {
  display: flex;
  min-height: 24px;
  line-height: 24px;
  background-color: #f1f2f7;
  text-align: center;
}
#testSelector .tabs .testTab {
  flex: 1 0 auto;
  cursor: pointer;
  padding: 2px;
  text-transform: uppercase;
  position: relative;
}
#testSelector .testTab.currentTest {
  box-shadow: 0 1px 0 0px #ccc;
  color: #4a90e2;
  border-radius: 0 0 10px 10px;
  background-color: #fff;
}
#testSelector .testTab.currentTest::before,
#testSelector .testTab.currentTest:not(:last-child)::after {
  content: " ";
  position: absolute;
  width: 10px;
  height: 10px;
  background: transparent;
}
#testSelector .testTab.currentTest::before {
  top: -4px;
  border-radius: 0 70%;
  box-shadow: 0px 1px 0 #ccc inset;
  left: -10px;
  z-index: 1;
  border-top: 4px solid #fff;
  border-right: 6px solid #fff;
}
#testSelector .testTab.currentTest::after {
  top: -4px;
  border-radius: 70% 0;
  box-shadow: 0px 1px 0 #ccc inset;
  right: -10px;
  z-index: 1;
  border-top: 4px solid #fff;
  border-left: 6px solid #fff;
}
#testSelector .tabs .testTab:not(.currentTest) {
  box-shadow: 0 1px 0 0px #ccc inset;
  color: #ababac;
}

/*****************
  PLAYER CONTROLS
*****************/
#playerControls {
  display: inline-flex;
  justify-content: space-between;
  width: 100%;
  margin: 0 10px;
  vertical-align: bottom;
  background-color: rgba(0,0,0,0.3);
  box-shadow:inset 0 1px 0 0 rgba(0,0,0,0.50);
  border-radius:15px;
}
.speedControls .icon span {
  padding: 5px 10px;
}
@media screen and (max-width: 480px) {
  #mode-player.displaySpeedSlider #playerControls,
  #mode-player.displaySpeedSlider > span.far,
  #mode-player.displaySpeedSlider > span.fas {
    display: none;
  }
  #mode-player:not(.displaySpeedSlider) #speedSlider {
    display: none;
  }
}
@media screen and (min-width: 481px) {
  .icon.displaySpeedSlider,
  .icon.hideSpeedSlider {
    display: none;
  }
}
/*****************
  SPEED CONTROLS
*****************/

#taskToolbar .mode:not(.active) .speedControls {
  display: none;
}
#taskToolbar .mode .speedControls {
  display: flex;
  justify-content: center;
  align-items: center;
}
/* ... */

